# game-engine

./: CMakeLists.txt  main.cpp
SSE-engine/: CMakeLists.txt
SSE-engine/basic/: Matrix3D.h  Vector2D.h  Vector3D.h
SSE-engine/objects/: GameObject.h  ObjectManager.cpp  ObjectManager.h
SSE-engine/scenes/: Scene.h  SceneManager.cpp  SceneManager.h
src/: CMakeLists.txt
src/objects/CircleObject/: CircleObject.cpp  CircleObject.h
src/objects/CoordinateSystemObject/: CoordinateSystemObject.cpp  CoordinateSystemObject.h
src/objects/VectorObject/: Vector2DObject.cpp  Vector2DObject.h
src/scenes/MainScene/: MainScene.h
src/scenes/VectorScene/: VectorScene.h
